# DUMMIIES-DEFI

./: Anchor.toml  README.md  package-lock.json  package.json
app/web3-for-dummies-ui/: next.config.ts  package-lock.json  package.json
app/web3-for-dummies-ui/src/app/: globals.css  layout.tsx  page.tsx
app/web3-for-dummies-ui/src/app/chat/: page.tsx
app/web3-for-dummies-ui/src/components/(ui)/: NetworkDisplay.tsx  NetworkSwitcher.tsx  mode-toggle.tsx  navbar.tsx  network-context.tsx  theme-provider.tsx  token-context.tsx
app/web3-for-dummies-ui/src/components/chat/: chat-interface.tsx
app/web3-for-dummies-ui/src/components/landing-page/: animated-background.tsx  animated-sphere.tsx  cursor-context.tsx  custom-cursor.tsx  floating-nav.tsx  landing-page.tsx  magnetic-button.tsx  text-reveal.tsx
app/web3-for-dummies-ui/src/components/wallet/: wallet-balances.tsx  wallet-button.tsx  wallet-provider.tsx
app/web3-for-dummies-ui/src/public/idl/: web3_for_dummies.json
app/web3-for-dummies-ui/src/public/idl/types/: web3_for_dummies.ts
app/web3-for-dummies-ui/src/services/: nlp-service.ts  solana-service.ts  swap-service.ts  tokens-service.ts
app/web3-for-dummies-ui/src/utils/: logger.ts
programs/web3-for-dummies/: Cargo.toml
programs/web3-for-dummies/src/: lib.rs
tests/: web3-for-dummies.ts
